--- a/_includes/tag-cards-block.html
+++ b/_includes/tag-cards-block.html
@@ -50,8 +50,8 @@
               </div>
               <div class="post-meta flex-grow-1 d-flex align-items-end">
                 <div class="me-auto">
-                  <i class="far fa-calendar fa-fw me-1"></i>
-                  {% include datetime.html date=post.date lang=lang %}
+                    <i class="far fa-calendar fa-fw me-1"></i>
+                    {{ post.date | date: "%b %-d, %Y" }}
                 </div>
               </div>
             </div>
